# BabaIsYou

./: New Text Document.txt  README.md  Rapport.docx  gitignore  ~$apport.docx
BabaIsYou/: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
BabaIsYou/.cmake/api/v1/reply/: cmakeFiles-v1-1092534fe747a835881d.json  cmakeFiles-v1-8098ed2aaabc5df4f9be.json  codemodel-v2-0808368ea0563b3a8cf9.json  codemodel-v2-2989afc02441307b425c.json  codemodel-v2-32920c9b73e9109688a8.json  codemodel-v2-a102bffc70a9b8d5fefe.json  codemodel-v2-b32d862040f586060e32.json  codemodel-v2-d3714ed6bc8ca2243fa4.json  codemodel-v2-db828fe74130a8214db3.json  codemodel-v2-fb2dfcb49371c947f9a8.json  codemodel-v2-ff201ac18122f8e8fcf5.json  directory-_deps.catch2-build-Debug-d870f1360135f8b87a81.json  directory-_deps.catch2-build.src-Debug-fda4751a5c80f0c0ba8f.json  directory-src-Debug-17487b7146f9aec8b58a.json  directory-src-Debug-43bdda0b9966ab69952f.json  directory-src-Debug-7f5466727f49b8837723.json  directory-src-Debug-9c92a682cd45e50679e6.json  directory-src-Debug-c84e05d81ff17cc868cc.json  index-2023-03-03T13-46-22-0350.json  index-2023-03-03T14-22-43-0079.json  index-2023-04-14T20-45-03-0239.json  index-2023-04-14T22-14-32-0542.json  index-2023-04-16T16-12-27-0239.json  index-2023-04-17T12-16-04-0351.json  index-2023-04-17T16-40-28-0325.json  index-2023-04-17T17-16-24-0999.json  index-2023-04-19T09-54-54-0994.json  index-2023-04-20T19-55-11-0479.json  index-2023-04-21T14-59-12-0514.json  target-BabaIsYou-Debug-4898b09a7bce56c9c93a.json  target-BabaIsYou-Debug-5bfd064cf5527c36d4db.json  target-BabaIsYou-Debug-9fadb61d81d1ca9d2966.json  target-BabaIsYou-Debug-aad63fee368d7ec31f31.json  target-BabaIsYou-Debug-c5fd8739b5b9ed9d3ad3.json  target-BabaIsYou-Debug-d2f18a788d0dbfe3b956.json  target-BabaIsYou-Debug-f80f7d27a4dcf24cf306.json  target-BabaIsYouTests-Debug-15147a21489982df11f7.json  target-BabaIsYouTests-Debug-4d785add95f31be19d2a.json  target-BabaIsYouTests-Debug-667e9f07fbb9b2e7a987.json  target-BabaIsYouTests-Debug-7670d0a7b02c96bc942f.json  (+3 more)
BabaIsYou/.cmake/api/v1/reply.prev/: cache-v2-72fdbb5f70d53fa63bf7.json  cache-v2-b6de01430b2410c90b91.json  cmakeFiles-v1-153d480a50ff39a03f2e.json  cmakeFiles-v1-852d4159f98e4a129410.json  codemodel-v2-0310d70bdad3ff944b70.json  codemodel-v2-1802626ea127b33f0ca6.json  codemodel-v2-1ddddf069d397cb29d98.json  codemodel-v2-5672ca133154c3299512.json  codemodel-v2-73e2a7c6a5c05c694bff.json  codemodel-v2-7494e7cc231e080658da.json  codemodel-v2-74da7249c27889170793.json  codemodel-v2-7a0f82b163df6ec21108.json  codemodel-v2-db1fa58f28894941f4c2.json  codemodel-v2-e0692554c1c77bd28c98.json  codemodel-v2-e99cc3b6a6dfa3ffbcdf.json  directory-src-Debug-4e8ece075c04d65997bb.json  directory-src-Debug-552c8042099d4bfc0a85.json  directory-src-Debug-639f7c78e0ad17328f84.json  directory-src-Debug-6deba7d95515453579cd.json  directory-src-Debug-8888e6403dab501cceb9.json  directory-src-Debug-b17dc21ab5e607b70d45.json  directory-src-Debug-cd7587beef5a16bdacc8.json  directory-src-Debug-f4511256372af4996e56.json  index-2023-03-03T14-02-01-0598.json  index-2023-04-14T20-31-19-0571.json  index-2023-04-14T21-03-41-0969.json  index-2023-04-17T12-15-39-0628.json  index-2023-04-17T17-16-11-0192.json  index-2023-04-18T09-31-00-0972.json  index-2023-04-18T14-56-49-0917.json  index-2023-04-20T19-36-54-0306.json  index-2023-04-21T14-49-04-0557.json  target-BabaIsYou-Debug-1ab7e941f747232c9740.json  target-BabaIsYou-Debug-34a799849b65d0ecfa0f.json  target-BabaIsYou-Debug-6fe2780bd2066556e14c.json  target-BabaIsYou-Debug-a4a03e368645f16d70a3.json  target-BabaIsYou-Debug-e67fa8b08ae689801a77.json  target-BabaIsYou-Debug-fe0004c7b9d5f069274e.json  target-BabaIsYouTests-Debug-1fac41c14c75fc62581d.json  target-BabaIsYouTests-Debug-2f353822edc385b120ab.json  (+3 more)
BabaIsYou/.qtc_clangd/: compile_commands.json
BabaIsYou/.qtc_clangd/.cache/clangd/index/: Board.cpp.F48A78C4DE104EDE.idx  Board.h.223406707619AE32.idx  Board.h.B3813D3AD585E10D.idx  Controller.cpp.181D3FFF3638D5B6.idx  Controller.h.6251C1FFEA83B89B.idx  Controller.h.D5410CE255D8CC3A.idx  Direction.h.174AC384614722E5.idx  Direction.h.ADFD2542BB9EF647.idx  Entity.cpp.051A0D20F1F8B0EE.idx  Entity.h.AFD908F93E87FBC9.idx  Entity.h.DA76728F5836F57C.idx  EntityNature.h.3E375ABEF1BF9123.idx  EntityNature.h.5B8EA7394797C3AD.idx  EntityType.h.635A359C5B0C68FF.idx  EntityType.h.DE0CC4B63644EF24.idx  Game.cpp.52ACA26BF3BFC543.idx  Game.h.61A67A43A5A5E989.idx  Game.h.7285C6F05BDB901D.idx  LevelLoader.h.3EDB5A601D7160E1.idx  LevelLoader.h.CA3835D1AD650111.idx  MyClass.cpp.BF92E59D5F96A042.idx  MyClass.cpp.F85F867EC8967CC5.idx  MyClass.h.7A04095ADFB7802A.idx  MyClass.h.CDFE4569E5AE16C4.idx  Observable.cpp.B8F5D80C2177B6D0.idx  Rule.h.6AC3574D75921090.idx  (+725 more)
BabaIsYou/levels/: backup.txt  level_2.txt  level_4.txt
BabaIsYou/src/: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Controller.cpp  Controller.h  Direction.h  Entity.h  EntityNature.h  Game.cpp  Game.h  LevelLoader.cpp  LevelLoader.h  MyClass.cpp  MyClass.h  Observable.h  Observer.cpp  Observer.h  Position.cpp  Position.h  Rule.cpp  Rule.h  View.cpp  View.h  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
BabaIsYou/src/console/: Controller.h  View.h
BabaIsYou/src/game/: Board.cpp  Board.h  Entity.cpp  Entity.h  EntityType.h  Game.cpp  Game.h  LevelLoader.cpp  Rule.h
BabaIsYou/src/gui/: boardobserver.cpp  boardobserver.h  endwindow.cpp  endwindow.h  endwindow.ui  mwbaba.cpp  mwbaba.h  mwbaba.ui
BabaIsYou/src/util/: Observable.cpp
BabaIsYou/tests/: CMakeLists.txt  cmake_install.cmake  testGame.cpp  testLevelLoader.cpp  testMyClass.cpp  testPosition.cpp
(+414 files in other folders)
